# universal_burgary_alarm

./: README.md  requirements.txt  universal_alarm.py
universal_burglary_alarm/: LICENSE  README.md  pyproject.toml  universal_alarm.py
